--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,8 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="AppTheme.Details" parent="AppTheme">
+        <item name="android:statusBarColor">#ffe7ee</item>
+    </style>
 </resources>
