New functionalities and fixes

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -49,7 +49,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/text_view"
+                    android:id="@+id/category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_medium"
@@ -67,6 +67,7 @@
 
 
             <TextView
+                android:id="@+id/exercise_name_tittle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -119,6 +120,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/exercise_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
@@ -127,23 +129,41 @@
                             android:textSize="23sp"
                             android:textStyle="bold" />
 
-                        <TextView
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins"
-                            android:text="Duración aprox: 5 min"
-                            android:textColor="#848496"
-                            android:textSize="13sp" />
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/poppins"
+                                android:text="Duración aprox: "
+                                android:textColor="#848496"
+                                android:textSize="13sp" />
+
+                            <TextView
+                                android:id="@+id/exercise_duration"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/poppins"
+                                android:text="20 min"
+                                android:textColor="#848496"
+                                android:textSize="13sp" />
+
+                        </LinearLayout>
+
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/exercise_difficulty"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end"
                         android:layout_weight="1"
                         android:fontFamily="@font/poppins_semibold"
                         android:gravity="end"
-                        android:text="$74.00"
+                        android:text="EASY"
                         android:textColor="#3D5CFF"
                         android:textSize="23sp"
                         android:textStyle="bold" />
