--- a/app/src/main/res/layout/activity_recording.xml
+++ b/app/src/main/res/layout/activity_recording.xml
@@ -264,7 +264,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <com.vocalix.app.resources.RecordButton
+            <com.vocalix.app.ui.customviews.RecordButton
                 android:id="@+id/recordButton"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
