--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -53,7 +53,7 @@
         android:id="@+id/more_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="goToMoreClicked">
+        android:onClick="goToProfilePage">
 
         <ImageView
             android:id="@+id/three_dots_icon"
