--- a/app/src/main/res/layout/save_for_later.xml
+++ b/app/src/main/res/layout/save_for_later.xml
@@ -144,7 +144,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <com.vocalix.app.resources.RecordButton
+            <com.vocalix.app.ui.customviews.RecordButton
                 android:id="@+id/recordButton"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
