--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,59 +25,70 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/poppins_semibold"
         android:text="@string/home_text_placement"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-    <TextView
-        android:id="@+id/description_text_1"
+    <LinearLayout
+        android:id="@+id/description_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/description_text_placement_1"
-        android:textSize="15sp"
-        android:lineSpacingExtra="3dp"
-        android:breakStrategy="high_quality"
-        android:hyphenationFrequency="full"
+        android:layout_marginTop="0dp"
+        android:orientation="vertical"
+        android:background="@drawable/description_background"
+        android:padding="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_text" />
+        app:layout_constraintTop_toBottomOf="@+id/title_text">
 
-    <TextView
-        android:id="@+id/description_text_2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/description_text_placement_2"
-        android:textSize="15sp"
-        android:lineSpacingExtra="3dp"
-        android:breakStrategy="high_quality"
-        android:hyphenationFrequency="full"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_text_1" />
+        <TextView
+            android:id="@+id/description_text_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:breakStrategy="high_quality"
+            android:fontFamily="@font/poppins_medium"
+            android:hyphenationFrequency="full"
+            android:justificationMode="inter_word"
+            android:lineSpacingExtra="3dp"
+            android:text="@string/description_text_placement_1"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/description_text_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:breakStrategy="high_quality"
+            android:fontFamily="@font/poppins_medium"
+            android:hyphenationFrequency="full"
+            android:justificationMode="inter_word"
+            android:lineSpacingExtra="3dp"
+            android:text="@string/description_text_placement_2"
+            android:textSize="15sp" />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/search_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        android:autofillHints="phonetic|pronunciation|voice-search"
         android:background="@drawable/search_bar_background"
-        android:hint="@string/home_search_hint"
-        android:drawableStart="@drawable/ic_location_on"
+        android:drawableStart="@drawable/ic_search"
         android:drawablePadding="10dp"
+        android:fontFamily="@font/poppins"
+        android:hint="@string/home_search_hint"
         android:inputType="text"
         android:padding="10dp"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_text_2"
-        android:autofillHints="phonetic|pronunciation|voice-search" />
+        app:layout_constraintTop_toBottomOf="@+id/description_layout" />
 
     <!-- Add your RecyclerView for the list items here -->
     <androidx.recyclerview.widget.RecyclerView
@@ -85,6 +96,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="12dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />
 
