--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,9 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/item_background"
     android:elevation="3dp"
-    android:padding="8dp"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp">
+    android:padding="8dp" >
 
     <ImageView
         android:id="@+id/exercise_image"
