--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -35,7 +35,7 @@
             android:id="@+id/welcome_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome back!"
+            android:text="Bienvenido de nuevo!"
             android:textColor="#808080"
             android:textSize="14sp" />
 
@@ -43,7 +43,7 @@
             android:id="@+id/user_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User Name"
+            android:text="Change Me"
             android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold" />
