--- a/app/src/main/res/layout/details_toolbar.xml
+++ b/app/src/main/res/layout/details_toolbar.xml
@@ -23,10 +23,9 @@
             app:layout_constraintBottom_toBottomOf="parent" />
 
         <TextView
-            android:id="@+id/details_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Details"
+            android:text="Vocalix"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold"
